# DivideFold

./: .gitignore  README.md  pyproject.toml  setup.py
data/data_structures/: 16S23S.dbn  Validation.csv  bpRNA-NF-15.0.csv  test_without_pseudoknots.dbn
scripts/: plot_results.py  train.py
src/dividefold/: predict.py  utils.py
src/dividefold/cogent/core/: tree.py
src/dividefold/cogent/format/: bedgraph.py
src/dividefold/cogent/maths/stats/: distribution.py  kendall.py  ks.py  test.py  util.py
src/dividefold/cogent/struct/: knots.py  rna2d.py
src/dividefold/cogent/util/: dict_array.py  misc.py  table.py  transform.py
src/dividefold/models/: cnn_1d.py  mlp.py
